# instameal-streamlit-dashboard

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  main.py  pyproject.toml
pages/: first_recommendation.py  nth_recommendation.py
shared/: components.py  config.py  db.py  styles.py
